# LatticaProject

./: CMakeLists.txt  test_lattica.cpp  torch_cuda_app.cu  torch_cuda_app.hpp
Lattica/: CMakeLists.txt  Lattica.cpp  Lattica.h
